crates/cadtab-core/src/snapshots/cadtab_core__layout__tests__rests_layout_snapshot.snap
---
source: crates/cadtab-core/src/layout.rs
expression: "serde_json::to_string_pretty(&tree).unwrap()"
---
{
  "meta": {
    "width": 11.0,
    "height": 9.3
  },
  "header": [
    {
      "kind": "text",
      "x": 5.5,
      "y": 1.0,
      "content": "gDGBD",
      "role": "tuning",
      "span": null
    }
  ],
  "systems": [
    {
      "bounds": {
        "x": 0.0,
        "y": 2.5,
        "w": 11.0,
        "h": 4.0
      },
      "prims": [
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 2.5,
          "x2": 9.6,
          "y2": 2.5,
          "weight": 0.06
        },
        {
          "kind": "text",
          "x": 1.0,
          "y": 2.5,
          "content": "D",
          "role": "stringLabel",
          "span": null
        },
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 3.5,
          "x2": 5.2000003,
          "y2": 3.5,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 6.4,
          "y1": 3.5,
          "x2": 9.6,
          "y2": 3.5,
          "weight": 0.06
        },
        {
          "kind": "text",
          "x": 1.0,
          "y": 3.5,
          "content": "B",
          "role": "stringLabel",
          "span": null
        },
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 4.5,
          "x2": 4.2000003,
          "y2": 4.5,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 5.4,
          "y1": 4.5,
          "x2": 9.6,
          "y2": 4.5,
          "weight": 0.06
        },
        {
          "kind": "text",
          "x": 1.0,
          "y": 4.5,
          "content": "G",
          "role": "stringLabel",
          "span": null
        },
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 5.5,
          "x2": 9.6,
          "y2": 5.5,
          "weight": 0.06
        },
        {
          "kind": "text",
          "x": 1.0,
          "y": 5.5,
          "content": "D",
          "role": "stringLabel",
          "span": null
        },
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 6.5,
          "x2": 9.6,
          "y2": 6.5,
          "weight": 0.06
        },
        {
          "kind": "text",
          "x": 1.0,
          "y": 6.5,
          "content": "g",
          "role": "stringLabel",
          "span": null
        },
        {
          "kind": "line",
          "x1": 9.6,
          "y1": 2.5,
          "x2": 9.6,
          "y2": 6.5,
          "weight": 0.1
        }
      ],
      "measures": [
        {
          "bounds": {
            "x": 2.0,
            "y": 2.5,
            "w": 7.6000004,
            "h": 4.0
          },
          "prims": [
            {
              "kind": "text",
              "x": 2.8,
              "y": 4.5,
              "content": "𝄽",
              "role": "rest",
              "span": {
                "start": 0,
                "end": 2
              }
            },
            {
              "kind": "text",
              "x": 4.8,
              "y": 4.5,
              "content": "0",
              "role": "fretNumber",
              "span": {
                "start": 4,
                "end": 7
              }
            },
            {
              "kind": "line",
              "x1": 4.8,
              "y1": 5.3,
              "x2": 4.8,
              "y2": 8.0,
              "weight": 0.08
            },
            {
              "kind": "text",
              "x": 4.8,
              "y": 8.6,
              "content": "T",
              "role": "finger",
              "span": {
                "start": 4,
                "end": 7
              }
            },
            {
              "kind": "text",
              "x": 5.8,
              "y": 3.5,
              "content": "0",
              "role": "fretNumber",
              "span": {
                "start": 8,
                "end": 11
              }
            },
            {
              "kind": "line",
              "x1": 5.8,
              "y1": 4.3,
              "x2": 5.8,
              "y2": 8.0,
              "weight": 0.08
            },
            {
              "kind": "text",
              "x": 5.8,
              "y": 8.6,
              "content": "T",
              "role": "finger",
              "span": {
                "start": 8,
                "end": 11
              }
            },
            {
              "kind": "text",
              "x": 6.8,
              "y": 4.5,
              "content": "𝄽",
              "role": "rest",
              "span": {
                "start": 12,
                "end": 14
              }
            },
            {
              "kind": "line",
              "x1": 4.8,
              "y1": 8.09,
              "x2": 5.8,
              "y2": 8.09,
              "weight": 0.18
            }
          ],
          "span": {
            "start": 0,
            "end": 14
          }
        }
      ]
    }
  ]
}
