crates/cadtab-core/src/snapshots/cadtab_core__layout__tests__simple_measure_layout_snapshot.snap
---
source: crates/cadtab-core/src/layout.rs
expression: "serde_json::to_string_pretty(&tree).unwrap()"
---
{
  "meta": {
    "width": 14.2,
    "height": 15.3
  },
  "header": [
    {
      "kind": "text",
      "x": 7.1,
      "y": 1.5,
      "content": "Syntax Showcase",
      "role": "title",
      "span": null
    },
    {
      "kind": "text",
      "x": 2.0,
      "y": 4.0,
      "content": "Open G",
      "role": "tuningName",
      "span": null
    },
    {
      "kind": "text",
      "x": 2.0,
      "y": 5.0,
      "content": "①=D",
      "role": "tuningString",
      "span": null
    },
    {
      "kind": "text",
      "x": 2.0,
      "y": 6.0,
      "content": "②=B",
      "role": "tuningString",
      "span": null
    },
    {
      "kind": "text",
      "x": 4.8,
      "y": 5.0,
      "content": "③=G",
      "role": "tuningString",
      "span": null
    },
    {
      "kind": "text",
      "x": 4.8,
      "y": 6.0,
      "content": "④=D",
      "role": "tuningString",
      "span": null
    },
    {
      "kind": "text",
      "x": 7.6,
      "y": 5.0,
      "content": "⑤=g",
      "role": "tuningString",
      "span": null
    },
    {
      "kind": "text",
      "x": 6.2,
      "y": 7.0,
      "content": "♩ = 120",
      "role": "tempo",
      "span": null
    }
  ],
  "systems": [
    {
      "bounds": {
        "x": 0.0,
        "y": 8.5,
        "w": 14.2,
        "h": 4.0
      },
      "prims": [
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 8.5,
          "x2": 7.7999997,
          "y2": 8.5,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 9.0,
          "y1": 8.5,
          "x2": 13.2,
          "y2": 8.5,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 9.5,
          "x2": 5.8,
          "y2": 9.5,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 7.0,
          "y1": 9.5,
          "x2": 13.2,
          "y2": 9.5,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 10.5,
          "x2": 3.8000002,
          "y2": 10.5,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 5.0,
          "y1": 10.5,
          "x2": 13.2,
          "y2": 10.5,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 11.5,
          "x2": 13.2,
          "y2": 11.5,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 12.5,
          "x2": 9.799999,
          "y2": 12.5,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 11.0,
          "y1": 12.5,
          "x2": 13.2,
          "y2": 12.5,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 8.5,
          "x2": 2.0,
          "y2": 12.5,
          "weight": 0.1
        },
        {
          "kind": "line",
          "x1": 13.2,
          "y1": 8.5,
          "x2": 13.2,
          "y2": 12.5,
          "weight": 0.1
        }
      ],
      "measures": [
        {
          "bounds": {
            "x": 2.0,
            "y": 8.5,
            "w": 11.2,
            "h": 4.0
          },
          "prims": [
            {
              "kind": "text",
              "x": 3.2,
              "y": 10.0,
              "content": "4",
              "role": "timeSig",
              "span": null
            },
            {
              "kind": "text",
              "x": 3.2,
              "y": 11.0,
              "content": "4",
              "role": "timeSig",
              "span": null
            },
            {
              "kind": "text",
              "x": 4.4,
              "y": 10.5,
              "content": "0",
              "role": "fretNumber",
              "span": {
                "start": 0,
                "end": 3
              }
            },
            {
              "kind": "line",
              "x1": 4.4,
              "y1": 11.3,
              "x2": 4.4,
              "y2": 14.0,
              "weight": 0.08
            },
            {
              "kind": "text",
              "x": 4.4,
              "y": 14.6,
              "content": "T",
              "role": "finger",
              "span": {
                "start": 0,
                "end": 3
              }
            },
            {
              "kind": "text",
              "x": 6.4,
              "y": 9.5,
              "content": "1",
              "role": "fretNumber",
              "span": {
                "start": 4,
                "end": 7
              }
            },
            {
              "kind": "line",
              "x1": 6.4,
              "y1": 10.3,
              "x2": 6.4,
              "y2": 14.0,
              "weight": 0.08
            },
            {
              "kind": "text",
              "x": 6.4,
              "y": 14.6,
              "content": "T",
              "role": "finger",
              "span": {
                "start": 4,
                "end": 7
              }
            },
            {
              "kind": "text",
              "x": 8.4,
              "y": 8.5,
              "content": "2",
              "role": "fretNumber",
              "span": {
                "start": 8,
                "end": 11
              }
            },
            {
              "kind": "line",
              "x1": 8.4,
              "y1": 9.3,
              "x2": 8.4,
              "y2": 14.0,
              "weight": 0.08
            },
            {
              "kind": "text",
              "x": 8.4,
              "y": 14.6,
              "content": "T",
              "role": "finger",
              "span": {
                "start": 8,
                "end": 11
              }
            },
            {
              "kind": "text",
              "x": 10.4,
              "y": 12.5,
              "content": "0",
              "role": "fretNumber",
              "span": {
                "start": 12,
                "end": 15
              }
            },
            {
              "kind": "line",
              "x1": 10.4,
              "y1": 13.3,
              "x2": 10.4,
              "y2": 14.0,
              "weight": 0.08
            },
            {
              "kind": "text",
              "x": 10.4,
              "y": 14.6,
              "content": "T",
              "role": "finger",
              "span": {
                "start": 12,
                "end": 15
              }
            }
          ],
          "span": {
            "start": 0,
            "end": 15
          }
        }
      ]
    }
  ]
}
