crates/cadtab-core/src/snapshots/cadtab_core__layout__tests__wrapped_systems_layout_snapshot.snap
---
source: crates/cadtab-core/src/layout.rs
expression: "serde_json::to_string_pretty(&tree).unwrap()"
---
{
  "meta": {
    "width": 12.0,
    "height": 19.8
  },
  "header": [
    {
      "kind": "text",
      "x": 2.0,
      "y": 2.0,
      "content": "Open G",
      "role": "tuningName",
      "span": null
    },
    {
      "kind": "text",
      "x": 2.0,
      "y": 3.0,
      "content": "①=D",
      "role": "tuningString",
      "span": null
    },
    {
      "kind": "text",
      "x": 2.0,
      "y": 4.0,
      "content": "②=B",
      "role": "tuningString",
      "span": null
    },
    {
      "kind": "text",
      "x": 4.8,
      "y": 3.0,
      "content": "③=G",
      "role": "tuningString",
      "span": null
    },
    {
      "kind": "text",
      "x": 4.8,
      "y": 4.0,
      "content": "④=D",
      "role": "tuningString",
      "span": null
    },
    {
      "kind": "text",
      "x": 7.6,
      "y": 3.0,
      "content": "⑤=g",
      "role": "tuningString",
      "span": null
    }
  ],
  "systems": [
    {
      "bounds": {
        "x": 0.0,
        "y": 5.5,
        "w": 12.0,
        "h": 4.0
      },
      "prims": [
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 5.5,
          "x2": 11.0,
          "y2": 5.5,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 6.5,
          "x2": 11.0,
          "y2": 6.5,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 7.5,
          "x2": 3.8545456,
          "y2": 7.5,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 5.0545454,
          "y1": 7.5,
          "x2": 7.536364,
          "y2": 7.5,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 8.736364,
          "y1": 7.5,
          "x2": 11.0,
          "y2": 7.5,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 8.5,
          "x2": 11.0,
          "y2": 8.5,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 9.5,
          "x2": 11.0,
          "y2": 9.5,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 5.5,
          "x2": 2.0,
          "y2": 9.5,
          "weight": 0.1
        },
        {
          "kind": "line",
          "x1": 7.318182,
          "y1": 5.5,
          "x2": 7.318182,
          "y2": 9.5,
          "weight": 0.1
        },
        {
          "kind": "line",
          "x1": 11.0,
          "y1": 5.5,
          "x2": 11.0,
          "y2": 9.5,
          "weight": 0.1
        }
      ],
      "measures": [
        {
          "bounds": {
            "x": 2.0,
            "y": 5.5,
            "w": 5.318182,
            "h": 4.0
          },
          "prims": [
            {
              "kind": "text",
              "x": 3.2,
              "y": 7.0,
              "content": "4",
              "role": "timeSig",
              "span": null
            },
            {
              "kind": "text",
              "x": 3.2,
              "y": 8.0,
              "content": "4",
              "role": "timeSig",
              "span": null
            },
            {
              "kind": "text",
              "x": 4.4545455,
              "y": 7.5,
              "content": "0",
              "role": "fretNumber",
              "span": {
                "start": 0,
                "end": 3
              }
            },
            {
              "kind": "line",
              "x1": 4.4545455,
              "y1": 8.3,
              "x2": 4.4545455,
              "y2": 11.0,
              "weight": 0.08
            },
            {
              "kind": "text",
              "x": 4.4545455,
              "y": 11.6,
              "content": "T",
              "role": "finger",
              "span": {
                "start": 0,
                "end": 3
              }
            }
          ],
          "span": {
            "start": 0,
            "end": 3
          }
        },
        {
          "bounds": {
            "x": 7.318182,
            "y": 5.5,
            "w": 3.681818,
            "h": 4.0
          },
          "prims": [
            {
              "kind": "text",
              "x": 8.136364,
              "y": 7.5,
              "content": "0",
              "role": "fretNumber",
              "span": {
                "start": 4,
                "end": 7
              }
            },
            {
              "kind": "line",
              "x1": 8.136364,
              "y1": 8.3,
              "x2": 8.136364,
              "y2": 11.0,
              "weight": 0.08
            },
            {
              "kind": "text",
              "x": 8.136364,
              "y": 11.6,
              "content": "T",
              "role": "finger",
              "span": {
                "start": 4,
                "end": 7
              }
            }
          ],
          "span": {
            "start": 4,
            "end": 7
          }
        }
      ]
    },
    {
      "bounds": {
        "x": 0.0,
        "y": 13.0,
        "w": 12.0,
        "h": 4.0
      },
      "prims": [
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 13.0,
          "x2": 11.0,
          "y2": 13.0,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 14.0,
          "x2": 11.0,
          "y2": 14.0,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 15.0,
          "x2": 2.4,
          "y2": 15.0,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 3.6,
          "y1": 15.0,
          "x2": 6.9,
          "y2": 15.0,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 8.1,
          "y1": 15.0,
          "x2": 11.0,
          "y2": 15.0,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 16.0,
          "x2": 11.0,
          "y2": 16.0,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 17.0,
          "x2": 11.0,
          "y2": 17.0,
          "weight": 0.06
        },
        {
          "kind": "line",
          "x1": 2.0,
          "y1": 13.0,
          "x2": 2.0,
          "y2": 17.0,
          "weight": 0.1
        },
        {
          "kind": "line",
          "x1": 6.5,
          "y1": 13.0,
          "x2": 6.5,
          "y2": 17.0,
          "weight": 0.1
        },
        {
          "kind": "line",
          "x1": 11.0,
          "y1": 13.0,
          "x2": 11.0,
          "y2": 17.0,
          "weight": 0.1
        }
      ],
      "measures": [
        {
          "bounds": {
            "x": 2.0,
            "y": 13.0,
            "w": 4.5,
            "h": 4.0
          },
          "prims": [
            {
              "kind": "text",
              "x": 3.0,
              "y": 15.0,
              "content": "0",
              "role": "fretNumber",
              "span": {
                "start": 8,
                "end": 11
              }
            },
            {
              "kind": "line",
              "x1": 3.0,
              "y1": 15.8,
              "x2": 3.0,
              "y2": 18.5,
              "weight": 0.08
            },
            {
              "kind": "text",
              "x": 3.0,
              "y": 19.1,
              "content": "T",
              "role": "finger",
              "span": {
                "start": 8,
                "end": 11
              }
            }
          ],
          "span": {
            "start": 8,
            "end": 11
          }
        },
        {
          "bounds": {
            "x": 6.5,
            "y": 13.0,
            "w": 4.5,
            "h": 4.0
          },
          "prims": [
            {
              "kind": "text",
              "x": 7.5,
              "y": 15.0,
              "content": "0",
              "role": "fretNumber",
              "span": {
                "start": 12,
                "end": 15
              }
            },
            {
              "kind": "line",
              "x1": 7.5,
              "y1": 15.8,
              "x2": 7.5,
              "y2": 18.5,
              "weight": 0.08
            },
            {
              "kind": "text",
              "x": 7.5,
              "y": 19.1,
              "content": "T",
              "role": "finger",
              "span": {
                "start": 12,
                "end": 15
              }
            }
          ],
          "span": {
            "start": 12,
            "end": 15
          }
        }
      ]
    }
  ]
}
